Add .gitignore and README.md files, fix SchemaExtractor and remove compiled files from git tracking